--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                                 <p class="margin-b-5">Applied self-supervised learning techniques to predict
                                     immunological diseases.</p>
                             </div>
-                            <a href="#" class="content-wrapper-link"></a>
+                            <a class="content-wrapper-link"></a>
                         </div>
                     </div>
                     <!-- <div class="col-md-3 col-sm-6 md-margin-b-4">
@@ -213,7 +213,7 @@
                                     improving image recognition in specialized medical datasets using machine learning
                                     models.</p>
                             </div>
-                            <a href="#" class="content-wrapper-link"></a>
+                            <a href="https://www.researchgate.net/publication/375504296_Enhancing_Image_Recognition_Leveraging_Machine_Learning_on_Specialized_Medical_Datasets" class="content-wrapper-link"></a>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-6">
@@ -228,7 +228,7 @@
                                     to extract facial features and integrated vision
                                     models to predict driver drowsiness.</p>
                             </div>
-                            <a href="#" class="content-wrapper-link"></a>
+                            <a href="https://drive.google.com/file/d/1tyKdbhFuFpQ2V9cXY3O2qP8QZ3C3AsL-/view" class="content-wrapper-link"></a>
                         </div>
                     </div>
                 </div>
@@ -257,7 +257,7 @@
                             <img class="img-responsive" src="img/970x647/proj1.jpg" alt="Latest Products Image">
                         </div>
                     </div>
-                    <h4><a href="#">Text-to-Image Synthesis using Dynamic-Unet</a> <span
+                    <h4><a href="https://github.com/nitishhrms/Text-to-Image-Synthesis-using-transformed-Unet">Text-to-Image Synthesis using Dynamic-Unet</a> <span
                             class="text-uppercase margin-l-20">AI/ML</span></h4>
                     <p>
                         I worked on a flexible U-Net by combining a pre-trained encoder (like ResNet) with a custom
@@ -285,7 +285,7 @@
                             <img class="img-responsive" src="img/970x647/proj2.jpg" alt="Latest Products Image">
                         </div>
                     </div>
-                    <h4><a href="#">Fracture Detection with Detection Transformer (DETR)</a> <span
+                    <h4><a href="https://huggingface.co/spaces/annie08/Nitish-Project-FractureDetection">Fracture Detection with Detection Transformer (DETR)</a> <span
                             class="text-uppercase margin-l-20">AI/ML</span></h4>
                     <p>
                         I built a custom object detection system using the DETR framework to detect fractures. I prepped
@@ -311,7 +311,7 @@
                             <img class="img-responsive" src="img/970x647/proj3.png" alt="Latest Products Image">
                         </div>
                     </div>
-                    <h4><a href="#">Generating Bird Songs Using Stable Diffusion</a> <span
+                    <h4><a href="https://github.com/nitishhrms/Bird-Song-Generator-using-Stable-Diffusion">Generating Bird Songs Using Stable Diffusion</a> <span
                             class="text-uppercase margin-l-20">AI/ML</span></h4>
                     <p>
                         I converted audio into PIL images and added noise to them using the Noisify library. Then, I
@@ -338,7 +338,7 @@
                             <img class="img-responsive" src="img/970x647/proj4.jpg" alt="Latest Products Image">
                         </div>
                     </div>
-                    <h4><a href="#">Image Caption Generation using BLIP</a> <span
+                    <h4><a href="https://huggingface.co/spaces/annie08/Imagecapt">Image Caption Generation using BLIP</a> <span
                             class="text-uppercase margin-l-20">AI/ML</span></h4>
                     <p>
                         I created a network with a CNN encoder and a BLIP transformer to generate captions for images.
@@ -362,7 +362,7 @@
                             <img class="img-responsive" src="img/970x647/proj5.png" alt="Latest Products Image">
                         </div>
                     </div>
-                    <h4><a href="#">Fashion Fusion</a> <span class="text-uppercase margin-l-20">AI/ML</span></h4>
+                    <h4><a href="https://huggingface.co/spaces/beckk123/fashionclassifier">Fashion Fusion</a> <span class="text-uppercase margin-l-20">AI/ML</span></h4>
                     <p>
                         Developed a fashion image classifier with FastAI's CNN, achieving 95% accuracy across four
                         categories: Active Wear, Ethnic Wear, Goth Fashion, and Business Wear. Utilized data
@@ -385,7 +385,7 @@
                             <img class="img-responsive" src="img/970x647/proj6.gif" alt="Latest Products Image">
                         </div>
                     </div>
-                    <h4><a href="#">Doom Conquerors with RL</a> <span class="text-uppercase margin-l-20">RL</span></h4>
+                    <h4><a href="https://github.com/nitishhrms/Doom-Conquerors-with-RL">Doom Conquerors with RL</a> <span class="text-uppercase margin-l-20">RL</span></h4>
                     <p>
                         I worked on a project where RL agents played the classic Doom game using the PPO (Proximal
                         Policy Optimization) algorithm. The agents were trained to navigate levels, avoid enemies, and
@@ -408,11 +408,11 @@
                             <img class="img-responsive" src="img/970x647/proj7.jpg" alt="Latest Products Image">
                         </div>
                     </div>
-                    <h4><a href="#">DAG FlowNet</a> <span class="text-uppercase margin-l-20">WebDev, MERN</span></h4>
+                    <h4><a href="https://github.com/nitishhrms/DAG-FLowNet">DAG FlowNet</a> <span class="text-uppercase margin-l-20">WebDev, MERN</span></h4>
                     <p>
                         I Built a MERN stack system to manage data flow in a Directed Acyclic Graph (DAG), handling
                         dependencies and
-                        data transfer between nodes.Implemented APIs, achieving a 99% reliability rate for graph
+                        data transfer between nodes. Implemented APIs, achieving a 99% reliability rate for graph
                         operations across over 1,000 nodes.
                     </p>
                     <a class="link" href="https://github.com/nitishhrms/DAG-FLowNet" target="_blank">
@@ -486,6 +486,7 @@
                                 <div class="service-info">
                                     <h3>Professional Experience</h3>
                                     <p class="margin-b-5">Software Developer, Tata Consultancy Services</p>
+                                    <p class="margin-b-5">Aug 2021 – Present</p>
                                     <ul>
                                         <li>Designed and created RESTful APIs for various project modules in accordance
                                             with specifications. Worked extensively on the backend, including Spring,
@@ -506,12 +507,57 @@
                                 <div class="service-info">
                                     <h3>Machine Learning Mentor</h3>
                                     <p class="margin-b-5">What After College</p>
+                                    <p class="margin-b-5">Jul 2020 – Sep 2020</p>
                                     <ul>
                                         <li>Instructed students on various machine learning algorithms, neural networks,
                                             and convolutional neural networks, guiding them to code these concepts from
                                             scratch.</li>
                                         <li>Taught implementation of computer vision projects and introduced students to
                                             emerging fields in computer vision.</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <br/>
+                    <br/>
+                    <div class="row row-space-2 margin-b-4">
+                        <div class="col-md-6 col-sm-12 md-margin-b-4">
+                            <div class="service" data-height="height">
+                                <div class="service-element">
+                                    <i class="service-icon icon-graduation"></i>
+                                </div>
+                                <div class="service-info">
+                                    <h3>Bharati Vidyapeeth College Of Engineering</h3>
+                                    <p class="margin-b-5">Bachelor of Science in Information Technology, New Delhi</p>
+                                    <p class="margin-b-5">Aug 2017 – July 2021</p>
+                                    <!-- <ul>
+                                        <li>Designed and created RESTful APIs for various project modules in accordance
+                                            with specifications. Worked extensively on the backend, including Spring,
+                                            Hibernate, and JPA.</li>
+                                        <li>Designed a Recommender system to detect prevalent code vulnerabilities.</li>
+                                        <li>Developed user interfaces using HTML, CSS, JavaScript, jQuery, and
+                                            Bootstrap.</li>
+                                    </ul> -->
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-md-6 col-sm-12">
+                            <div class="service" data-height="height">
+                                <div class="service-element">
+                                    <i class="service-icon icon-book-open"></i>
+                                </div>
+                                <div class="service-info">
+                                    <h3>Hansraj Model School</h3>
+                                    <p class="margin-b-5">Punjabi Bagh, New Delhi</p>
+                                    <!-- <p class="margin-b-5"></p> -->
+                                    <ul>
+                                        <!-- <li>Instructed students on various machine learning algorithms, neural networks,
+                                            and convolutional neural networks, guiding them to code these concepts from
+                                            scratch.</li>
+                                        <li>Taught implementation of computer vision projects and introduced students to
+                                            emerging fields in computer vision.</li> -->
                                     </ul>
                                 </div>
                             </div>
@@ -565,7 +611,7 @@
                         </div>
                         <div class="col-md-3 col-xs-6">
                             <h4>Web</h4>
-                            <a href="https://nitish-portfolio-24.netlify.app/">Hire Me!</a>
+                            <a href="https://nitishprofile.netlify.app/ ">Hire Me!</a>
                         </div>
                     </div>
                     <!--// end row -->
